ncc/testsuite/negative/foreach.n
foreach (_ in null) { } // E: collection in foreach must be an array or type implementing enumerator pattern, the compiler has no idea what the type might be
foreach (_ in 3) { } // E: expected System.Collections.IEnumerable, got int in type-enforced expression
def f (x) {
  foreach (_ in x) { } // E: collection in foreach must be an array or type implementing enumerator pattern, the compiler has no idea what the type might be
}
